# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: brain_even.py
brain_games/engine/: game_engine.py
brain_games/games/: calc.py  engine.py  even.py  gcd.py  prime.py  progression.py
brain_games/games_conditions/: brain_calc_conditions.py  brain_even_conditions.py  brain_gcd_conditions.py  brain_prime_conditions.py  brain_progression_conditions.py
brain_games/games_logic/: brain_even_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
